--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">publications</a>
-  <a href="#">teaching</a>
-  <a href="#">students</a>
+  <a href="publications.html">Publications</a>
+  <a href="teaching.html">Teaching</a>
+  <a href="students.html">Students</a>
 </div>
 
 <!-- Use any element to open the sidenav -->
