--- a/students.html
+++ b/students.html
@@ -15,6 +15,15 @@
 
 		<body>
 
+<div class="w3-sidebar w3-bar-block" style="width:25%">
+  <a href="index.html" class="w3-bar-item w3-button">Home</a>
+  <a href="publications.html" class="w3-bar-item w3-button">Publications</a>
+  <a href="teaching.html" class="w3-bar-item w3-button">Teaching</a>
+  <a href="students.html" class="w3-bar-item w3-button">Students</a>
+</div>
+
+<div style="margin-left:25%">
+
 			<section id="intro" class="paddingTopped">
 				<div class="container">
 					<div class="row">
@@ -81,7 +90,7 @@ levels (2018-2019)</p>
         <div class="text-center paddingBottom">
           <p class="iconFooter">
             <!-- <a href="http://linkedin.com/in/TODO" class="a"><i class="fa fa-linkedin"></i></a>&nbsp;&nbsp; -->
-            <a href="mailto:anthony.e.wong@colorado.edu" class="b"><i class="fa fa-envelope"></i></a>&nbsp;&nbsp;
+            <a href="mailto:aewsma@rit.edu" class="b"><i class="fa fa-envelope"></i></a>&nbsp;&nbsp;
             <a href="http://github.com/tonyewong" class="c"><i class="fa fa-github"></i></a>&nbsp;&nbsp;
             <!-- <a href="http://twitter.com/TODO" class="d"><i class="fa fa-twitter"></i></a>&nbsp;&nbsp; -->
             <!-- <a href="http://medium.com/@TODO" class="e"><i class="fa fa-medium"></i></a>&nbsp;&nbsp; -->
@@ -92,5 +101,8 @@ levels (2018-2019)</p>
           <p class="footer">Tony Wong <span id="updateYourYearPLZ"></span></p>
         </div>
       </section>
+
+</div>
+
 	</body>
 </html>
