--- a/students.html
+++ b/students.html
@@ -15,15 +15,6 @@
 
 		<body>
 
-<div class="w3-sidebar w3-bar-block" style="width:25%">
-  <a href="index.html" class="w3-bar-item w3-button">Home</a>
-  <a href="publications.html" class="w3-bar-item w3-button">Publications</a>
-  <a href="teaching.html" class="w3-bar-item w3-button">Teaching</a>
-  <a href="students.html" class="w3-bar-item w3-button">Students</a>
-</div>
-
-<div style="margin-left:25%">
-
 			<section id="intro" class="paddingTopped">
 				<div class="container">
 					<div class="row">
@@ -35,6 +26,15 @@
 				</div>
 			</section>
 
+
+<div class="w3-sidebar w3-bar-block" style="width:25%">
+  <p><a href="index.html" class="w3-bar-item w3-button">Home</a></p>
+  <p><a href="publications.html" class="w3-bar-item w3-button">Publications</a></p>
+  <p><a href="teaching.html" class="w3-bar-item w3-button">Teaching</a></p>
+  <p><a href="students.html" class="w3-bar-item w3-button">Students</a></p>
+</div>
+
+<div style="margin-left:25%">
 
 			<section id="current" class="paddingTopped">
 				<div class="container">
