--- a/students.html
+++ b/students.html
@@ -15,6 +15,13 @@
 
 		<body>
 
+[<a href="index.html" class="w3-bar-item w3-button">Home</a>]
+[<a href="publications.html" class="w3-bar-item w3-button">Publications</a>]
+[<a href="teaching.html" class="w3-bar-item w3-button">Teaching</a>]
+[<a href="students.html" class="w3-bar-item w3-button">Students</a>]
+
+<hr>
+
 			<section id="intro" class="paddingTopped">
 				<div class="container">
 					<div class="row">
@@ -25,16 +32,6 @@
 					</div>
 				</div>
 			</section>
-
-
-<div class="w3-sidebar w3-bar-block" style="width:25%">
-  <p><a href="index.html" class="w3-bar-item w3-button">Home</a></p>
-  <p><a href="publications.html" class="w3-bar-item w3-button">Publications</a></p>
-  <p><a href="teaching.html" class="w3-bar-item w3-button">Teaching</a></p>
-  <p><a href="students.html" class="w3-bar-item w3-button">Students</a></p>
-</div>
-
-<div style="margin-left:25%">
 
 			<section id="current" class="paddingTopped">
 				<div class="container">
@@ -101,8 +98,6 @@ levels (2018-2019)</p>
           <p class="footer">Tony Wong <span id="updateYourYearPLZ"></span></p>
         </div>
       </section>
-
-</div>
 
 	</body>
 </html>
