--- a/students.html
+++ b/students.html
@@ -15,10 +15,10 @@
 
 		<body>
 
-[<a href="index.html" class="w3-bar-item w3-button">Home</a>]
-[<a href="publications.html" class="w3-bar-item w3-button">Publications</a>]
-[<a href="teaching.html" class="w3-bar-item w3-button">Teaching</a>]
-[<a href="students.html" class="w3-bar-item w3-button">Students</a>]
+[<a href="index.html">Home</a>]
+[<a href="publications.html">Publications</a>]
+[<a href="teaching.html">Teaching</a>]
+[<a href="students.html">Students</a>]
 
 <hr>
 
