--- a/students.html
+++ b/students.html
@@ -33,7 +33,7 @@
 				</div>
 			</section>
 
-			<section id="current" class="paddingTopped">
+			<section id="current" class="paddingToppedSmall">
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12">
@@ -46,7 +46,7 @@
 			</section>
 
 
-			<section id="former" class="paddingTopped">
+			<section id="former" class="paddingToppedSmall">
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12">
@@ -95,7 +95,7 @@ levels (2018-2019)</p>
           </p>
         </div>
         <div class="text-center">
-          <p class="footer">Tony Wong <span id="updateYourYearPLZ"></span></p>
+          <p class="footer">Tony Wong <span id="2019"></span></p>
         </div>
       </section>
 
