--- a/students.html
+++ b/students.html
@@ -15,7 +15,7 @@
 
 		<body>
 
-[<a href="index.html">Home</a>]
+			[<span style="padding-left: 20px"><a href="index.html">Home</a></span>]
 [<a href="publications.html">Publications</a>]
 [<a href="teaching.html">Teaching</a>]
 [<a href="students.html">Students</a>]
