--- a/students.html
+++ b/students.html
@@ -15,10 +15,10 @@
 
 		<body>
 
-			[<span style="padding-left: 20px"><a href="index.html">Home</a></span>]
-[<a href="publications.html">Publications</a>]
-[<a href="teaching.html">Teaching</a>]
-[<a href="students.html">Students</a>]
+			<span style="padding-left: 20px">[<a href="index.html">Home</a>]</span>
+			<span style="padding-left: 20px">[<a href="publications.html">Publications</a>]</span>
+			<span style="padding-left: 20px">[<a href="teaching.html">Teaching</a>]</span>
+			<span style="padding-left: 20px">[<a href="students.html">Students</a>]</span>
 
 <hr>
 
