--- a/students.html
+++ b/students.html
@@ -13,13 +13,21 @@
       <title>Tony Wong - Students</title>
     </head>
 
+<div class="w3-bar w3-black">
+  <a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
+  <a href="publications.html" class="w3-bar-item w3-button w3-mobile">Publications</a>
+</div>
+
+
 		<body>
 
+<!--
 			<span style="padding-left: 20px" class="paddingToppedSmall">[<a href="index.html">Home</a>]</span>
 			<span style="padding-left: 20px">[<a href="publications.html">Publications</a>]</span>
 			<span style="padding-left: 20px">[<a href="teaching.html">Teaching</a>]</span>
 			<span style="padding-left: 20px">[<a href="students.html">Students</a>]</span>
-
+-->
+			
 <hr>
 
 			<section id="intro" class="paddingTopped">
