--- a/students.html
+++ b/students.html
@@ -11,13 +11,16 @@
       <script src="https://cdn.rawgit.com/jusleg/updateYourYearPLZ/111cb805/updateYourYearPLZ.js"></script>
 
       <title>Tony Wong - Students</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
     </head>
 
+<div class="w3-container">
 <div class="w3-bar w3-black">
   <a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
   <a href="publications.html" class="w3-bar-item w3-button w3-mobile">Publications</a>
 </div>
-
+</div
 
 		<body>
 
