--- a/publications.html
+++ b/publications.html
@@ -13,6 +13,18 @@
       <title>Tony Wong - Publications</title>
     </head>
 
+<div class="w3-top">
+<div class="w3-container">
+<div class="w3-bar w3-black">
+  <a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
+  <a href="publications.html" class="w3-bar-item w3-button w3-mobile">Publications</a>
+  <a href="teaching.html" class="w3-bar-item w3-button w3-mobile">Teaching</a>
+  <a href="students.html" class="w3-bar-item w3-button w3-mobile">Students</a>
+  <a href="https://drive.google.com/open?id=0BzfIQ3K44Vk4YzdpNnE0WFk1b3c" class="w3-bar-item w3-button w3-mobile">CV</a>
+</div>
+</div
+</div>
+
 		<body>
 
 			<section id="pubsintro" class="paddingTopped">
