--- a/publications.html
+++ b/publications.html
@@ -38,7 +38,7 @@
 			</section>
 
 
-			<section id="prep" class="paddingTopped">
+			<section id="prep" class="paddingToppedSmall">
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12">
@@ -51,7 +51,7 @@
 			</section>
 
 
-			<section id="review" class="paddingTopped">
+			<section id="review" class="paddingToppedSmall">
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12">
@@ -73,7 +73,7 @@
 			</section>
 
 
-			<section id="published" class="paddingTopped">
+			<section id="published" class="paddingToppedSmall">
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12">
