adding exam art

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 							<p><a href="teaching.html">Teaching</a></p>
 							<p><a href="students.html">Students</a></p>
 							<p><a href="https://drive.google.com/open?id=0BzfIQ3K44Vk4YzdpNnE0WFk1b3c">Reasonably current CV</a></p>
+							<p><a href="examart.html">Exam art</a></p>
 
 							<div>
 							<section class="paddingTopped">
@@ -150,7 +151,7 @@
         <div class="text-center paddingBottom">
           <p class="iconFooter">
             <!-- <a href="http://linkedin.com/in/TODO" class="a"><i class="fa fa-linkedin"></i></a>&nbsp;&nbsp; -->
-            <a href="mailto:Tony.Wong@rit.edu" class="b"><i class="fa fa-envelope"></i></a>&nbsp;&nbsp;
+            <a href="mailto:aewsma@rit.edu" class="b"><i class="fa fa-envelope"></i></a>&nbsp;&nbsp;
             <a href="http://github.com/tonyewong" class="c"><i class="fa fa-github"></i></a>&nbsp;&nbsp;
             <!-- <a href="http://twitter.com/TODO" class="d"><i class="fa fa-twitter"></i></a>&nbsp;&nbsp; -->
             <!-- <a href="http://medium.com/@TODO" class="e"><i class="fa fa-medium"></i></a>&nbsp;&nbsp; -->
@@ -158,7 +159,7 @@
           </p>
         </div>
         <div class="text-center">
-          <p class="footer">Tony Wong <span id="updateYourYearPLZ"></span></p>
+          <p class="footer">Tony Wong <span id="2019"></span></p>
         </div>
       </section>
     </body>
