--- a/teaching.html
+++ b/teaching.html
@@ -69,7 +69,7 @@
         <div class="text-center paddingBottom">
           <p class="iconFooter">
             <!-- <a href="http://linkedin.com/in/TODO" class="a"><i class="fa fa-linkedin"></i></a>&nbsp;&nbsp; -->
-            <a href="mailto:anthony.e.wong@colorado.edu" class="b"><i class="fa fa-envelope"></i></a>&nbsp;&nbsp;
+            <a href="mailto:aewsma@rit.edu" class="b"><i class="fa fa-envelope"></i></a>&nbsp;&nbsp;
             <a href="http://github.com/tonyewong" class="c"><i class="fa fa-github"></i></a>&nbsp;&nbsp;
             <!-- <a href="http://twitter.com/TODO" class="d"><i class="fa fa-twitter"></i></a>&nbsp;&nbsp; -->
             <!-- <a href="http://medium.com/@TODO" class="e"><i class="fa fa-medium"></i></a>&nbsp;&nbsp; -->
@@ -77,7 +77,7 @@
           </p>
         </div>
         <div class="text-center">
-          <p class="footer">Tony Wong <span id="updateYourYearPLZ"></span></p>
+          <p class="footer">Tony Wong <span id="2019"></span></p>
         </div>
       </section>
   </body>
