--- a/students.html
+++ b/students.html
@@ -22,6 +22,7 @@
   <a href="teaching.html" class="w3-bar-item w3-button w3-mobile">Teaching</a>
   <a href="students.html" class="w3-bar-item w3-button w3-mobile">Students</a>
   <a href="https://drive.google.com/open?id=0BzfIQ3K44Vk4YzdpNnE0WFk1b3c" class="w3-bar-item w3-button w3-mobile">CV</a>
+  <a href="examart.html" class="w3-bar-item w3-button w3-mobile">Exam art</a>
 </div>
 </div
 		<body>
