--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
       <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Raleway" />
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
       <link rel="stylesheet" href="style.css">
       <script src="https://code.jquery.com/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
@@ -12,6 +13,17 @@
 
       <title>Tony Wong</title>
     </head>
+
+<div class="w3-container">
+<div class="w3-bar w3-black">
+  <a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
+  <a href="publications.html" class="w3-bar-item w3-button w3-mobile">Publications</a>
+  <a href="teaching.html" class="w3-bar-item w3-button w3-mobile">Teaching</a>
+  <a href="students.html" class="w3-bar-item w3-button w3-mobile">Students</a>
+  <a href="https://drive.google.com/open?id=0BzfIQ3K44Vk4YzdpNnE0WFk1b3c" class="w3-bar-item w3-button w3-mobile">CV</a>
+  <a href="examart.html" class="w3-bar-item w3-button w3-mobile">Exam art</a>
+</div>
+</div
 
     <body>
       <section class="fullHeight" id="welcome">
