updating exam art

--- a/examart.html
+++ b/examart.html
@@ -49,7 +49,7 @@ much appreciate all doodles - they liven up grading and brighten my cold, dark d
 						<div class="col-xs-12">
 							<span class="emphText">Fall 2019</span><hr>
 
-Stay tuned...!
+<p><img src="./pictures/examart/fall2019_01.png" width=300 alt="Why hellooooo!" class="center"></p>
 
 						</div>
 					</div>
