--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
 							<p><a href="https://www.researchgate.net/profile/Tony_Wong19">ResearchGate</a></p>
 							<p><a href="https://goo.gl/Hu21nB">Google Scholar</a></p>
 							</div>
+
+<p>Pictures speak a thousand words, so here's a picture made up of words.</p>
+
+<iframe src='https://www.grantforward.com/profile/share_tagcloud?profile_secret_key=e35bd85c-5807-454a-94ec-6085a0987483&width=800&height=400' style='width:800px;height:400px;border:none;padding:0;margin:0;overflow:hidden;'></iframe>
+
             </div>
           </div>
         </div>
