--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 							<p><a href="https://goo.gl/Hu21nB">Google Scholar</a></p>
 							</div>
 
-<p>Pictures speak a thousand words, so here's a picture made up of words.</p>
+<p>Pictures speak a thousand words, so here's a picture made up of words from my Google Scholar page.</p>
 
-<iframe src='https://www.grantforward.com/profile/share_tagcloud?profile_secret_key=e35bd85c-5807-454a-94ec-6085a0987483&width=800&height=400' style='width:800px;height:400px;border:none;padding:0;margin:0;overflow:hidden;'></iframe>
+<iframe src='https://www.grantforward.com/profile/share_tagcloud?profile_secret_key=e35bd85c-5807-454a-94ec-6085a0987483&width=800&height=400' style='width:900px;height:450px;border:none;padding:0;margin:0;overflow:hidden;'></iframe>
 
             </div>
           </div>
