--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
 		    <div>
 			    <section class="paddingTopped">
 				    <span class="emphText">Current semester</span><hr>
-					<p>In Fall 2019, I am teaching MATH 181: Project-Based Calculus I</p>
+					<p>In Spring 2020, I am teaching Stochastic Processes (MATH 505/605) and team-teaching Climate Change: Science, Technology and Policy (ENVS and PUBL 531/631, CHEM 531).</p>
 					<p><b>Office hours:</b></p>
-					<p>Mon 10:30-12, Wed 10:30-12, Fri 10-11, and by appointment</p>
+					<p>Stochastic Processes: Mon/Tue/Wed 11-12,</p>
+					<p>Climate Change: Mon/Tue/Wed 12-1,</p>
+					<p>and by appointment.</p>
 					<p>If you need to meet and chat outside of regularly scheduled office hours, send me an email to set something up so we can have a focused conversation.</p>
 					</div>
 							<div>
