adding data page to website

--- a/data.html
+++ b/data.html
@@ -11,7 +11,7 @@
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
       <script src="https://cdn.rawgit.com/jusleg/updateYourYearPLZ/111cb805/updateYourYearPLZ.js"></script>
 
-      <title>Tony Wong - Students</title>
+      <title>Tony Wong - Data</title>
 
     </head>
 
@@ -32,53 +32,8 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12">
-						<span class="mediumText">Students</span><hr>
-<p></p>
-						</div>
-					</div>
-				</div>
-			</section>
-
-			<section id="current" class="paddingToppedSmall">
-				<div class="container">
-					<div class="row">
-						<div class="col-xs-12">
-							<span class="emphText">Current</span><hr>
-
-
-						</div>
-					</div>
-				</div>
-			</section>
-
-
-			<section id="former" class="paddingToppedSmall">
-				<div class="container">
-					<div class="row">
-						<div class="col-xs-12">
-							<span class="emphText">Former</span><hr>
-
-<p><span style="color:firebrick;font-weight:bold">H. Nihar Nandan, senior thesis</span> investigating the
-impacts of uncertainty characterization/quantification in statistical calibration framework, on projections
-for future temperature and sea levels (2018-2019)</p>
-
-<p><span style="color:coral;font-weight:bold">Travis Torline, Undergraduate Student Assistant</span> reconciling multiple approaches to
-to constrain nonstationary projections of coastal storm surge flood risk (2019)</p>
-
-<p><span style="color:steelblue;font-weight:bold">Mingxuan Zhang, independent study</span> exploring the use
-of Markov chain Monte Carlo statistical calibration methods to constrain estimates of storm surge return
-levels (2018-2019)</p>
-
-<p><span style="color:mediumpurple;font-weight:bold">Kyle Rosenberg, independent study</span> designing a classifier for proposed Pokemon Go trades (2019)</p>
-
-<p><span style="color:darkgoldenrod;font-weight:bold">Jon Oulton, independent study</span> cluster analysis and builing a recommendation system for rock climbing routes (2019)</p>
-
-<p><span style="color:teal;font-weight:bold">John Letey, independent study</span> exploring the use of Markov chain Monte Carlo statistical calibration methods to fit distributions to data, including estimation of distributions for storm surge return levels (2018)</p>
-
-<p><span style="color:darkgreen;font-weight:bold">Alexandra Klufas, summer REU internship</span> characterizing the effects of length of data record on calibrated estimates of storm surge model parameters and return levels (2017)</p>
-
-<p><span style="color:tomato;font-weight:bold">Rob Fuller, Master's thesis</span> examining the value of expert assessment and probabilistic inversion in constraining projections of Antarctic ice sheet constributions to sea levels (2016-2017)</p>
-							
+						<span class="mediumText">Data</span><hr>
+<p>Under construction. Stay tuned!</p>
 						</div>
 					</div>
 				</div>
@@ -101,7 +56,7 @@ levels (2018-2019)</p>
           </p>
         </div>
         <div class="text-center">
-          <p class="footer">Tony Wong <span id="2019"></span></p>
+          <p class="footer">Tony Wong <span id="2020"></span></p>
         </div>
       </section>
 
