--- a/examart.html
+++ b/examart.html
@@ -23,6 +23,7 @@
   <a href="students.html" class="w3-bar-item w3-button w3-mobile">Students</a>
   <a href="https://drive.google.com/open?id=0BzfIQ3K44Vk4YzdpNnE0WFk1b3c" class="w3-bar-item w3-button w3-mobile">CV</a>
   <a href="examart.html" class="w3-bar-item w3-button w3-mobile">Exam art</a>
+  <a href="data.html" class="w3-bar-item w3-button w3-mobile">Data</a>
 </div>
 </div
 		<body>
