--- a/students.html
+++ b/students.html
@@ -33,7 +33,15 @@
 					<div class="row">
 						<div class="col-xs-12">
 						<span class="mediumText">Students</span><hr>
-<p></p>
+<p>
+My main research interests are centered around future projections of sea-level rise and their impacts on coastal defense and adaptation decision-making. 
+ But, I also work on a diverse set of other topics. Check out the list of previous/ongoing student projects below or send me an email if you'd like to chat.
+</p>
+							
+<p>
+ I am currently looking for students at all levels, and aim to create a research group with a diversity of culture, experiences and ways of thinking. 
+ If you are interested in chatting about research, potential projects or anything, feel free to shoot me an email or stop by my office.						
+</p>
 						</div>
 					</div>
 				</div>
@@ -45,6 +53,11 @@
 						<div class="col-xs-12">
 							<span class="emphText">Current</span><hr>
 
+<p><span style="color:seagreen3;font-weight:bold">Hannah Sheets, I.E. Research Fellowship</span> characterizing how delayed 
+action to protect coastal areas affects expected damages from sea-level rise and coastal storms (2020-)</p>
+
+<p><span style="color:blueviolet;font-weight:bold">Patrick Ribas, summer co-op student</span> quantifying sensitivities,
+uncertainties and trade-offs in anaerobic food waste disgester and associated greenhouse gas emissions (2020-)</p>
 
 						</div>
 					</div>
