--- a/students.html
+++ b/students.html
@@ -53,7 +53,7 @@ My main research interests are centered around future projections of sea-level r
 						<div class="col-xs-12">
 							<span class="emphText">Current</span><hr>
 
-<p><span style="color:seagreen3;font-weight:bold">Hannah Sheets, I.E. Research Fellowship</span> characterizing how delayed 
+<p><span style="color:seagreen;font-weight:bold">Hannah Sheets, I.E. Research Fellowship</span> characterizing how delayed 
 action to protect coastal areas affects expected damages from sea-level rise and coastal storms (2020-)</p>
 
 <p><span style="color:blueviolet;font-weight:bold">Patrick Ribas, summer co-op student</span> quantifying sensitivities,
