--- a/teaching.html
+++ b/teaching.html
@@ -36,7 +36,9 @@
 
 
 <table style="width:80%" cellpadding="3">
-  <tr height="30"> <td><b>Asst. Professor</b>, Rochester Institute of Technology</td><td>Project-Based Calculus 1 (MATH 181)</td><td>Fall 2019</td> </tr>
+  <tr height="30"> <td><b>Asst. Professor</b>, Rochester Institute of Technology</td><td>Probability and Statistics I (MATH 251)</td><td>Coming Fall 2020!</td> </tr>
+  <tr height="30"> <td></td><td>Stochastic Processes (MATH 505/605),<BR> Climate Change: Science, Technology and Policy</td><td>Spring 2020</td> </tr>
+  <tr height="30"> <td></td><td>Project-Based Calculus 1 (MATH 181)</td><td>Fall 2019</td> </tr>
   <tr height="30"> <td><b>Instructor</b>, University of Colorado Boulder</td><td>Starting Computing (CSCI
 1300),<BR> Introduction to Data Science (CSCI 3022)</td><td>Spring 2019</td> </tr>
   <tr height="30"> <td></td><td>Introduction to Data Science (CSCI 3022),<BR> Discrete Structures (CSCI 2824)</td><td>Fall 2018</td> </tr>
