--- a/publications.html
+++ b/publications.html
@@ -46,6 +46,9 @@
 						<div class="col-xs-12">
 							<span class="emphText">In preparation:</span><hr>
 
+<div><div><b>Wong, T.E.</b> and M. Cox (2020), 
+	<u>An analysis of the class size effect in undergraduate mathematics and computer science courses</u>. 
+<div><br /></div>
 
 						</div>
 					</div>
@@ -59,12 +62,15 @@
 						<div class="col-xs-12">
 							<span class="emphText">In review:</span><hr>
 
-<div><div><b>Wong, T.E.</b>, Y. Cui, D. Royer, and K. Keller (2019), 
-	<u>Earth-system sensitivity constrained by long-term carbon-cycle observations</u>. <a href="https://arxiv.org/abs/1910.11987">Preprint here</a></div></div>
+<div><div><b>Wong, T.E.</b>, Y. Cui, D. Royer, and K. Keller (2020), 
+	<u>A tighter constraint on Earth-system sensitivity from long-term temperature and carbon-cycle observations</u>. 
+	<a href="https://arxiv.org/abs/1910.11987">Preprint here</a></div></div>
 <div><br /></div>
 
-<div><div>Vega-Westhoff, B., R. Sriver, C. Hartin, <b>T. Wong</b>, and K. Keller (2019), 
-	<u>The Role of climate sensitivity in extreme sea-level rise projections</u></div></div>
+<div><div><b>T.E. Wong</b>, T. Torline and M. Zhang (2020), 
+	<u>Evidence for increasing frequency of extreme coastal sea levels</u>.
+	<a href="https://arxiv.org/abs/2006.06804">Preprint here</a>,
+	<a href="https://zenodo.org/record/3889897">data and codes here</a></div></div>
 <div><br /></div>
 
 							<div><br /></div>
@@ -81,12 +87,22 @@
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
 
-<div><div>[23] <b>Wong, T.E.</b> (2019), <u>Lasting coastal hazards from past greenhouse gas emissions</u>, 
-	<i>Proceedings of the National Academy of Sciences</i>, DOI: 10.1073/pnas.1917051116. <a href="https://doi.org/10.1073/pnas.1917051116">Link</a></div></div>
+<div><div>[24] Vega-Westhoff, B., R. Sriver, C. Hartin, <b>T. Wong</b>, and K. Keller (2020), 
+	<u>The Role of Climate Sensitivity in Upper‐Tail Sea Level Rise Projections</u>,
+	<i>Geophysical Research Letters</i>,
+	DOI: 10.1029/2019GL085792. <a href="https://doi.org/10.1029/2019GL085792">Link</a></div></div>
+<div><br /></div>
+
+<div><div>[23] <b>Wong, T.E.</b> (2019),
+	<u>Lasting coastal hazards from past greenhouse gas emissions</u>, 
+	<i>Proceedings of the National Academy of Sciences</i>, 
+	DOI: 10.1073/pnas.1917051116. <a href="https://doi.org/10.1073/pnas.1917051116">Link</a></div></div>
 <div><br /></div>
 
 <div><div>[22] Brady, E., S. Stevenson, D. Bailey, Z. Liu, D. Noone, J. Nusbaumer, B.L. Otto-Bliesner, C. Tabor, R. Tomas, <b>T.E. Wong</b>, J. Zhang, and J. Zhu (2019), 
-	<u>The connected isotopic water cycle in the Community Earth System Model version 1</u>, accepted for publication in <i>Journal of Advances in Modeling Earth Systems</i>, DOI: 10.1029/2019MS001663. <a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2019MS001663">Link</a></div></div>
+	<u>The connected isotopic water cycle in the Community Earth System Model version 1</u>, 
+	<i>Journal of Advances in Modeling Earth Systems</i>, 
+	DOI: 10.1029/2019MS001663. <a href="https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2019MS001663">Link</a></div></div>
 <div><br /></div>
 
 <div><div>[21] Vega-Westhoff, B., R.L. Sriver, C.A. Hartin, <b>T.E. Wong</b>, and K. Keller (2019), 
@@ -184,7 +200,7 @@ Uncertainty Underestimates Upper Tails of Flood Hazard</u>, <i>Environmental Res
           </p>
         </div>
         <div class="text-center">
-          <p class="footer">Tony Wong <span id="2019"></span></p>
+          <p class="footer">Tony Wong <span id="202-"></span></p>
         </div>
       </section>
 	</body>
