--- a/index.html
+++ b/index.html
@@ -53,10 +53,8 @@
 		    <div>
 			    <section class="paddingTopped">
 				    <span class="emphText">Current semester</span><hr>
-					<p>In Spring 2020, I am teaching Stochastic Processes (MATH 505/605) and team-teaching Climate Change: Science, Technology and Policy (ENVS and PUBL 531/631, CHEM 531).</p>
-					<p><b>Office hours:</b></p>
-					<p>Stochastic Processes: Mon/Tue/Wed 11-12,</p>
-					<p>Climate Change: Mon/Tue/Wed 12-1,</p>
+					<p>In Fall 2020, I am teaching Probability and Statistics I (MATH 251, sections 03 and 09). Both sections are meeting online via Zoom.</p>
+					<p><b>Office hours: to be determined... (via Zoom)</b></p>
 					<p>and by appointment.</p>
 					<p>If you need to meet and chat outside of regularly scheduled office hours, send me an email to set something up so we can have a focused conversation.</p>
 					</div>
@@ -179,7 +177,7 @@
           </p>
         </div>
         <div class="text-center">
-          <p class="footer">Tony Wong <span id="2019"></span></p>
+          <p class="footer">Tony Wong <span id="2020"></span></p>
         </div>
       </section>
     </body>
