--- a/publications.html
+++ b/publications.html
@@ -62,14 +62,19 @@
 						<div class="col-xs-12">
 							<span class="emphText">In review:</span><hr>
 
+<div><div><b>Wong T.E.</b>, G.M. Thurston, N. Barlow, N. Cahill, L. Carichino, K. Maki, D. Ross, and J. Schneider (2020), 
+	  <u>Evaluating the Sensitivity of SARS-CoV-2 Infection Rates on College Campuses to Wastewater Surveillance</u>.
+	<a href="https://www.medrxiv.org/content/10.1101/2020.10.09.20210245v1">Preprint on medRxiv here</a></div></div>
+<div><br /></div>
+
 <div><div><b>Wong, T.E.</b>, Y. Cui, D. Royer, and K. Keller (2020), 
 	<u>A tighter constraint on Earth-system sensitivity from long-term temperature and carbon-cycle observations</u>. 
-	<a href="https://arxiv.org/abs/1910.11987">Preprint here</a></div></div>
+	<a href="https://arxiv.org/abs/1910.11987">Preprint on arXiv here</a></div></div>
 <div><br /></div>
 
 <div><div><b>T.E. Wong</b>, T. Torline and M. Zhang (2020), 
 	<u>Evidence for increasing frequency of extreme coastal sea levels</u>.
-	<a href="https://arxiv.org/abs/2006.06804">Preprint here</a>,
+	<a href="https://arxiv.org/abs/2006.06804">Preprint on arXiv here</a>,
 	<a href="https://zenodo.org/record/3889897">data and codes here</a></div></div>
 <div><br /></div>
 
