--- a/students.html
+++ b/students.html
@@ -53,11 +53,14 @@ My main research interests are centered around future projections of sea-level r
 						<div class="col-xs-12">
 							<span class="emphText">Current</span><hr>
 
+<p><span style="color:steelblue;font-weight:bold">Alana Hough, M.S. student researcher</span> using decision trees and random forests to classify high/low-risk 
+climate states and identify key parametric uncertainties related to sea-level rise hazards (2020-)</p>
+
+<p><span style="color:darkorange;font-weight:bold">Ken Shultes, M.S. student researcher</span> developing model calibration methods for uncertainty 
+quantification/characterization for Earth-system sensitivity using long-term carbon cycle models and observational data (2020-)</p>
+
 <p><span style="color:seagreen;font-weight:bold">Hannah Sheets, I.E. Research Fellowship</span> characterizing how delayed 
 action to protect coastal areas affects expected damages from sea-level rise and coastal storms (2020-)</p>
-
-<p><span style="color:blueviolet;font-weight:bold">Patrick Ribas, summer co-op student</span> quantifying sensitivities,
-uncertainties and trade-offs in anaerobic food waste disgester and associated greenhouse gas emissions (2020-)</p>
 
 						</div>
 					</div>
@@ -70,6 +73,9 @@ uncertainties and trade-offs in anaerobic food waste disgester and associated gr
 					<div class="row">
 						<div class="col-xs-12">
 							<span class="emphText">Former</span><hr>
+
+<p><span style="color:blueviolet;font-weight:bold">Patrick Ribas, summer co-op student</span> quantifying sensitivities,
+uncertainties and trade-offs in anaerobic food waste disgester and associated greenhouse gas emissions (2020)</p>
 
 <p><span style="color:firebrick;font-weight:bold">H. Nihar Nandan, senior thesis</span> investigating the
 impacts of uncertainty characterization/quantification in statistical calibration framework, on projections
