--- a/students.html
+++ b/students.html
@@ -84,7 +84,7 @@ for future temperature and sea levels (2018-2019)</p>
 <p><span style="color:coral;font-weight:bold">Travis Torline, Undergraduate Student Assistant</span> reconciling multiple approaches to
 to constrain nonstationary projections of coastal storm surge flood risk (2019)</p>
 
-<p><span style="color:steelblue;font-weight:bold">Mingxuan Zhang, independent study</span> exploring the use
+<p><span style="color:blue;font-weight:bold">Mingxuan Zhang, independent study</span> exploring the use
 of Markov chain Monte Carlo statistical calibration methods to constrain estimates of storm surge return
 levels (2018-2019)</p>
 
@@ -92,7 +92,7 @@ levels (2018-2019)</p>
 
 <p><span style="color:darkgoldenrod;font-weight:bold">Jon Oulton, independent study</span> cluster analysis and builing a recommendation system for rock climbing routes (2019)</p>
 
-<p><span style="color:teal;font-weight:bold">John Letey, independent study</span> exploring the use of Markov chain Monte Carlo statistical calibration methods to fit distributions to data, including estimation of distributions for storm surge return levels (2018)</p>
+<p><span style="color:deepskyblue1;font-weight:bold">John Letey, independent study</span> exploring the use of Markov chain Monte Carlo statistical calibration methods to fit distributions to data, including estimation of distributions for storm surge return levels (2018)</p>
 
 <p><span style="color:darkgreen;font-weight:bold">Alexandra Klufas, summer REU internship</span> characterizing the effects of length of data record on calibrated estimates of storm surge model parameters and return levels (2017)</p>
 
