--- a/examart.html
+++ b/examart.html
@@ -44,19 +44,20 @@ much appreciate all doodles - they liven up grading and brighten my cold, dark d
 				</div>
 			</section>
 
-			<section id="current" class="paddingToppedSmall">
+			<section id="former" class="paddingToppedSmall">
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12">
-							<span class="emphText">Fall 2019</span><hr>
+							<span class="emphText">Fall 2020</span><hr>
 
-<p><img src="./pictures/examart/fall2019_01.png" width=300 alt="Why hellooooo!" class="center"></p>
+<p><img src="./pictures/examart/fall2020_1.png" width=300 alt="" class="center"></p>
+<p><img src="./pictures/examart/fall2020_2.png" width=300 alt="" class="center"></p>
+<p><img src="./pictures/examart/fall2020_3.png" width=300 alt="" class="center"></p>
 
 						</div>
 					</div>
 				</div>
 			</section>
-
 
 			<section id="former" class="paddingToppedSmall">
 				<div class="container">
@@ -78,6 +79,18 @@ checkers and trade tea and spices." class="center"></p>
 				</div>
 			</section>
 
+			<section id="current" class="paddingToppedSmall">
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-12">
+							<span class="emphText">Fall 2019</span><hr>
+
+<p><img src="./pictures/examart/fall2019_01.png" width=300 alt="Why hellooooo!" class="center"></p>
+
+						</div>
+					</div>
+				</div>
+			</section>
 
 <div dir="ltr"><br /></div>
 <div dir="ltr"><hr /></div>
