--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 		    <div>
 			    <section class="paddingTopped">
 				    <span class="emphText">Current semester</span><hr>
-					<p>In Fall 2020, I am teaching Probability and Statistics I (MATH 251, sections 03 and 09). Both sections are meeting online via Zoom.</p>
-					<p><b>Office hours:  Mon 2:30-4, Wed 12-1, Thu 9-10:30 (via Zoom; see myCourses for a Zoom link)</b></p>
+					<p>In Spring 2021, I am teaching Stochastic Processes (MATH 505/605). </p>
+					<p><b>Office hours:  Mon 2:30-4, Thu 11-12:30 (via Zoom; see myCourses for a Zoom link)</b></p>
 					<p>and by appointment.</p>
 					<p>If you need to meet and chat outside of regularly scheduled office hours, send me an email to set something up so we can have a focused conversation.</p>
 					</div>
