--- a/students.html
+++ b/students.html
@@ -53,13 +53,22 @@ My main research interests are centered around future projections of sea-level r
 						<div class="col-xs-12">
 							<span class="emphText">Current</span><hr>
 
+<p><span style="color:turquoise4;font-weight:bold">Grayson Olin, B.S./I.E. Research Fellowship</span> evaluating the impacts of correlated sources of data
+	on constraining future predictions of sea-level rise (Summer 2021)</p>
+
+<p><span style="color:tomato;font-weight:bold">Matthew Peeks, B.S. student researcher</span> using fixed effects models to examine the effects
+	of class size on student performance and teaching evaluation scores (Spring 2021)</p>
+
+<p><span style="color:springgreen3;font-weight:bold">Meghan Childs, Ph.D. student researcher</span> data-informed stochastic modeling for the spread of 
+	COVID-19 (2021-)</p>
+
 <p><span style="color:steelblue;font-weight:bold">Alana Hough, M.S. student researcher</span> using decision trees and random forests to classify high/low-risk 
 climate states and identify key parametric uncertainties related to sea-level rise hazards (2020-)</p>
 
 <p><span style="color:darkorange;font-weight:bold">Ken Shultes, M.S. student researcher</span> developing model calibration methods for uncertainty 
 quantification/characterization for Earth-system sensitivity using long-term carbon cycle models and observational data (2020-)</p>
 
-<p><span style="color:seagreen;font-weight:bold">Hannah Sheets, I.E. Research Fellowship</span> characterizing how delayed 
+<p><span style="color:seagreen;font-weight:bold">Hannah Sheets, B.S./I.E. Research Fellowship</span> characterizing how delayed 
 action to protect coastal areas affects expected damages from sea-level rise and coastal storms (2020-)</p>
 
 						</div>
