--- a/students.html
+++ b/students.html
@@ -53,13 +53,13 @@ My main research interests are centered around future projections of sea-level r
 						<div class="col-xs-12">
 							<span class="emphText">Current</span><hr>
 
-<p><span style="color:turquoise4;font-weight:bold">Grayson Olin, B.S./I.E. Research Fellowship</span> evaluating the impacts of correlated sources of data
+<p><span style="color:darkturquoise;font-weight:bold">Grayson Olin, B.S./I.E. Research Fellowship</span> evaluating the impacts of correlated sources of data
 	on constraining future predictions of sea-level rise (Summer 2021)</p>
 
 <p><span style="color:tomato;font-weight:bold">Matthew Peeks, B.S. student researcher</span> using fixed effects models to examine the effects
 	of class size on student performance and teaching evaluation scores (Spring 2021)</p>
 
-<p><span style="color:springgreen3;font-weight:bold">Meghan Childs, Ph.D. student researcher</span> data-informed stochastic modeling for the spread of 
+<p><span style="color:springgreen;font-weight:bold">Meghan Childs, Ph.D. student researcher</span> data-informed stochastic modeling for the spread of 
 	COVID-19 (2021-)</p>
 
 <p><span style="color:steelblue;font-weight:bold">Alana Hough, M.S. student researcher</span> using decision trees and random forests to classify high/low-risk 
