--- a/students.html
+++ b/students.html
@@ -59,7 +59,7 @@ My main research interests are centered around future projections of sea-level r
 <p><span style="color:tomato;font-weight:bold">Matthew Peeks, B.S. student researcher</span> using fixed effects models to examine the effects
 	of class size on student performance and teaching evaluation scores (Spring 2021)</p>
 
-<p><span style="color:springgreen;font-weight:bold">Meghan Childs, Ph.D. student researcher</span> data-informed stochastic modeling for the spread of 
+<p><span style="color:limegreen;font-weight:bold">Meghan Childs, Ph.D. student researcher</span> data-informed stochastic modeling for the spread of 
 	COVID-19 (2021-)</p>
 
 <p><span style="color:steelblue;font-weight:bold">Alana Hough, M.S. student researcher</span> using decision trees and random forests to classify high/low-risk 
