--- a/publications.html
+++ b/publications.html
@@ -67,11 +67,6 @@
 	<a href="https://www.medrxiv.org/content/10.1101/2020.10.09.20210245v1">Preprint on medRxiv here</a></div></div>
 <div><br /></div>
 
-<div><div><b>Wong, T.E.</b>, Y. Cui, D. Royer, and K. Keller (2020), 
-	<u>A tighter constraint on Earth-system sensitivity from long-term temperature and carbon-cycle observations</u>. 
-	<a href="https://arxiv.org/abs/1910.11987">Preprint on arXiv here</a></div></div>
-<div><br /></div>
-
 <div><div><b>T.E. Wong</b>, T. Torline and M. Zhang (2020), 
 	<u>Evidence for increasing frequency of extreme coastal sea levels</u>.
 	<a href="https://arxiv.org/abs/2006.06804">Preprint on arXiv here</a>,
@@ -91,6 +86,12 @@
 					<div class="row">
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
+
+<div><div><b>Wong, T.E.</b>, Y. Cui, D. Royer, and K. Keller (2020), 
+	<u>A tighter constraint on Earth-system sensitivity from long-term temperature and carbon-cycle observations</u>,
+	accepted, <i> Nature Communications</i>,
+	<a href="https://arxiv.org/abs/1910.11987">Preprint on arXiv here</a></div></div>
+<div><br /></div>
 
 <div><div>[24] Vega-Westhoff, B., R. Sriver, C. Hartin, <b>T. Wong</b>, and K. Keller (2020), 
 	<u>The Role of Climate Sensitivity in Upper‐Tail Sea Level Rise Projections</u>,
