--- a/publications.html
+++ b/publications.html
@@ -46,9 +46,14 @@
 						<div class="col-xs-12">
 							<span class="emphText">In preparation:</span><hr>
 
-<div><div><b>Wong, T.E.</b> and M. Cox (2020), 
+<div><div><b>Wong, T.E.</b> , M. Peeks, and M. Cox (2021), 
 	<u>An analysis of the class size effect in undergraduate mathematics and computer science courses</u>. 
 <div><br /></div>
+
+<div><div>Hough, A. and <b>T.E. Wong</b> (2021), 
+	<u>Evolution of Parametric Drivers of High-End Sea-Level Hazards</u>. 
+<div><br /></div>
+	
 
 						</div>
 					</div>
@@ -87,7 +92,7 @@
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
 
-<div><div><b>Wong, T.E.</b>, Y. Cui, D. Royer, and K. Keller (2020), 
+<div><div><b>Wong, T.E.</b>, Y. Cui, D. Royer, and K. Keller (2021), 
 	<u>A tighter constraint on Earth-system sensitivity from long-term temperature and carbon-cycle observations</u>,
 	accepted, <i> Nature Communications</i>,
 	<a href="https://arxiv.org/abs/1910.11987">Preprint on arXiv here</a></div></div>
