--- a/examart.html
+++ b/examart.html
@@ -48,6 +48,19 @@ much appreciate all doodles - they liven up grading and brighten my cold, dark d
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12">
+							<span class="emphText">Spring 2021</span><hr>
+
+<p><img src="./pictures/examart/spring2021.png" width=550 alt="" class="center"></p>
+
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section id="former" class="paddingToppedSmall">
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-12">
 							<span class="emphText">Fall 2020</span><hr>
 
 <p><img src="./pictures/examart/fall2020_1.png" width=700 alt="" class="center"></p>
@@ -108,7 +121,7 @@ checkers and trade tea and spices." class="center"></p>
           </p>
         </div>
         <div class="text-center">
-          <p class="footer">Tony Wong <span id="2019"></span></p>
+          <p class="footer">Tony Wong <span id="2021"></span></p>
         </div>
       </section>
 
