--- a/publications.html
+++ b/publications.html
@@ -94,8 +94,8 @@
 
 <div><div><b>Wong, T.E.</b>, Y. Cui, D. Royer, and K. Keller (2021), 
 	<u>A tighter constraint on Earth-system sensitivity from long-term temperature and carbon-cycle observations</u>,
-	accepted, <i> Nature Communications</i>,
-	DOI: 10.1038/s41467-021-23543-9. <a href="https://arxiv.org/abs/1910.11987">Preprint on arXiv here</a></div></div>
+	<i>Nature Communications</i>,
+	DOI: 10.1038/s41467-021-23543-9. <a href="https://www.nature.com/articles/s41467-021-23543-9">Link</a></div></div>
 <div><br /></div>
 
 <div><div>[24] Vega-Westhoff, B., R. Sriver, C. Hartin, <b>T. Wong</b>, and K. Keller (2020), 
