--- a/publications.html
+++ b/publications.html
@@ -49,10 +49,6 @@
 <div><div><b>Wong, T.E.</b> , M. Peeks, and M. Cox (2021), 
 	<u>An analysis of the class size effect in undergraduate mathematics and computer science courses</u>. 
 <div><br /></div>
-
-<div><div>Hough, A. and <b>T.E. Wong</b> (2021), 
-	<u>Evolution of Parametric Drivers of High-End Sea-Level Hazards</u>. 
-<div><br /></div>
 	
 
 						</div>
@@ -67,12 +63,17 @@
 						<div class="col-xs-12">
 							<span class="emphText">In review:</span><hr>
 
-<div><div><b>Wong T.E.</b>, G.M. Thurston, N. Barlow, N. Cahill, L. Carichino, K. Maki, D. Ross, and J. Schneider (2020), 
+<div><div>Hough, A. and <b>T.E. Wong</b> (2021), 
+	<u>Evolution of Parametric Drivers of High-End Sea-Level Hazards</u>. 
+	<a href="">Preprint on arXiv to come</a></div></div>
+<div><br /></div>
+
+<div><div><b>Wong T.E.</b>, G.M. Thurston, N. Barlow, N. Cahill, L. Carichino, K. Maki, D. Ross, and J. Schneider (2021), 
 	  <u>Evaluating the Sensitivity of SARS-CoV-2 Infection Rates on College Campuses to Wastewater Surveillance</u>.
 	<a href="https://www.medrxiv.org/content/10.1101/2020.10.09.20210245v1">Preprint on medRxiv here</a></div></div>
 <div><br /></div>
 
-<div><div><b>T.E. Wong</b>, T. Torline and M. Zhang (2020), 
+<div><div><b>T.E. Wong</b>, T. Torline and M. Zhang (2021), 
 	<u>Evidence for increasing frequency of extreme coastal sea levels</u>.
 	<a href="https://arxiv.org/abs/2006.06804">Preprint on arXiv here</a>,
 	<a href="https://zenodo.org/record/3889897">data and codes here</a></div></div>
@@ -92,7 +93,7 @@
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
 
-<div><div><b>Wong, T.E.</b>, Y. Cui, D. Royer, and K. Keller (2021), 
+<div><div>[25] <b>Wong, T.E.</b>, Y. Cui, D. Royer, and K. Keller (2021), 
 	<u>A tighter constraint on Earth-system sensitivity from long-term temperature and carbon-cycle observations</u>,
 	<i>Nature Communications</i>,
 	DOI: 10.1038/s41467-021-23543-9. <a href="https://www.nature.com/articles/s41467-021-23543-9">Link</a></div></div>
