--- a/publications.html
+++ b/publications.html
@@ -65,7 +65,7 @@
 
 <div><div>Hough, A. and <b>T.E. Wong</b> (2021), 
 	<u>Evolution of Parametric Drivers of High-End Sea-Level Hazards</u>. 
-	<a href="">Preprint on arXiv to come</a></div></div>
+	<a href="https://arxiv.org/abs/2106.12041">Preprint on arXiv here</a></div></div>
 <div><br /></div>
 
 <div><div><b>Wong T.E.</b>, G.M. Thurston, N. Barlow, N. Cahill, L. Carichino, K. Maki, D. Ross, and J. Schneider (2021), 
