--- a/students.html
+++ b/students.html
@@ -53,23 +53,20 @@ My main research interests are centered around future projections of sea-level r
 						<div class="col-xs-12">
 							<span class="emphText">Current</span><hr>
 
-<p><span style="color:darkturquoise;font-weight:bold">Grayson Olin, B.S./I.E. Research Fellowship</span> evaluating the impacts of correlated sources of data
-	on constraining future predictions of sea-level rise (Summer 2021)</p>
+<p><span style="color:saffron;font-weight:bold">Matthew Dunham, REU student researcher</span> using Jupyter notebooks to characterize students'
+development of computational literacy in physics and mathematics (Summer 2021)</p>
 
-<p><span style="color:tomato;font-weight:bold">Matthew Peeks, B.S. student researcher</span> using fixed effects models to examine the effects
-	of class size on student performance and teaching evaluation scores (Spring 2021)</p>
+<p><span style="color:mediumteal;font-weight:bold">Beck Tedeschi, REU student researcher</span> developing stochastic models to assess retention and persistence 
+rates for underrepresented undergraduate student populations (Summer 2021)</p>
+
+<p><span style="color:firebrick;font-weight:bold">Grayson Olin, B.S./I.E. Research Fellowship</span> evaluating the impacts of correlated sources of data
+on constraining future predictions of sea-level rise (Summer 2021)</p>
+
+<p><span style="color:darkturquoise;font-weight:bold">Jaser Iniguez, M.S. student researcher</span> using paleoclimate models and proxy data to characterize
+structural uncertainty and time-variation in the Earth-system sensitivity (Summer 2021)</p>
 
 <p><span style="color:limegreen;font-weight:bold">Meghan Childs, Ph.D. student researcher</span> data-informed stochastic modeling for the spread of 
-	COVID-19 (2021-)</p>
-
-<p><span style="color:steelblue;font-weight:bold">Alana Hough, M.S. student researcher</span> using decision trees and random forests to classify high/low-risk 
-climate states and identify key parametric uncertainties related to sea-level rise hazards (2020-)</p>
-
-<p><span style="color:darkorange;font-weight:bold">Ken Shultes, M.S. student researcher</span> developing model calibration methods for uncertainty 
-quantification/characterization for Earth-system sensitivity using long-term carbon cycle models and observational data (2020-)</p>
-
-<p><span style="color:seagreen;font-weight:bold">Hannah Sheets, B.S./I.E. Research Fellowship</span> characterizing how delayed 
-action to protect coastal areas affects expected damages from sea-level rise and coastal storms (2020-)</p>
+COVID-19 (2021-)</p>
 
 						</div>
 					</div>
@@ -82,6 +79,18 @@ action to protect coastal areas affects expected damages from sea-level rise and
 					<div class="row">
 						<div class="col-xs-12">
 							<span class="emphText">Former</span><hr>
+
+<p><span style="color:tomato;font-weight:bold">Matthew Peeks, B.S. student researcher</span> using fixed effects models to examine the effects 
+of class size on student performance and teaching evaluation scores (Spring 2021)</p>
+
+<p><span style="color:steelblue;font-weight:bold">Alana Hough, M.S. student researcher</span> using decision trees and random forests to classify high/low-risk 
+climate states and identify key parametric uncertainties related to sea-level rise hazards (2020-2021)</p>
+
+<p><span style="color:darkorange;font-weight:bold">Ken Shultes, M.S. student researcher</span> developing model calibration methods for uncertainty 
+quantification/characterization for Earth-system sensitivity using long-term carbon cycle models and observational data (2020-2021)</p>
+
+<p><span style="color:seagreen;font-weight:bold">Hannah Sheets, B.S./I.E. Research Fellowship</span> characterizing how delayed 
+action to protect coastal areas affects expected damages from sea-level rise and coastal storms (2020-2021)</p>
 
 <p><span style="color:blueviolet;font-weight:bold">Patrick Ribas, summer co-op student</span> quantifying sensitivities,
 uncertainties and trade-offs in anaerobic food waste disgester and associated greenhouse gas emissions (2020)</p>
