--- a/students.html
+++ b/students.html
@@ -53,10 +53,10 @@ My main research interests are centered around future projections of sea-level r
 						<div class="col-xs-12">
 							<span class="emphText">Current</span><hr>
 
-<p><span style="color:saffron;font-weight:bold">Matthew Dunham, REU student researcher</span> using Jupyter notebooks to characterize students'
+<p><span style="color:#FBB917;font-weight:bold">Matthew Dunham, REU student researcher</span> using Jupyter notebooks to characterize students'
 development of computational literacy in physics and mathematics (Summer 2021)</p>
 
-<p><span style="color:mediumteal;font-weight:bold">Beck Tedeschi, REU student researcher</span> developing stochastic models to assess retention and persistence 
+<p><span style="color:#045F5F;font-weight:bold">Beck Tedeschi, REU student researcher</span> developing stochastic models to assess retention and persistence 
 rates for underrepresented undergraduate student populations (Summer 2021)</p>
 
 <p><span style="color:firebrick;font-weight:bold">Grayson Olin, B.S./I.E. Research Fellowship</span> evaluating the impacts of correlated sources of data
