--- a/publications.html
+++ b/publications.html
@@ -63,6 +63,11 @@
 						<div class="col-xs-12">
 							<span class="emphText">In review:</span><hr>
 
+<div><div><b>Wong T.E.</b>, C. Ledna, L. Rennels, H. Sheets, F. Errickson, D. Diaz, and D. Anthoff (2021), 
+	  <u>Uncertainty in Future Sea Level Raises High-End Coastal Adaptation Costs</u>.
+	<a href="">Preprint to come</a></div></div>
+<div><br /></div>
+
 <div><div>Hough, A. and <b>T.E. Wong</b> (2021), 
 	<u>Evolution of Parametric Drivers of High-End Sea-Level Hazards</u>. 
 	<a href="https://arxiv.org/abs/2106.12041">Preprint on arXiv here</a></div></div>
