--- a/publications.html
+++ b/publications.html
@@ -73,11 +73,6 @@
 	<a href="https://arxiv.org/abs/2106.12041">Preprint on arXiv here</a></div></div>
 <div><br /></div>
 
-<div><div><b>Wong T.E.</b>, G.M. Thurston, N. Barlow, N. Cahill, L. Carichino, K. Maki, D. Ross, and J. Schneider (2021), 
-	  <u>Evaluating the Sensitivity of SARS-CoV-2 Infection Rates on College Campuses to Wastewater Surveillance</u>.
-	<a href="https://www.medrxiv.org/content/10.1101/2020.10.09.20210245v1">Preprint on medRxiv here</a></div></div>
-<div><br /></div>
-
 <div><div><b>T.E. Wong</b>, T. Torline and M. Zhang (2021), 
 	<u>Evidence for increasing frequency of extreme coastal sea levels</u>.
 	<a href="https://arxiv.org/abs/2006.06804">Preprint on arXiv here</a>,
@@ -97,6 +92,12 @@
 					<div class="row">
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
+
+<div><div>[26] <b>Wong T.E.</b>, G.M. Thurston, N. Barlow, N. Cahill, L. Carichino, K. Maki, D. Ross, and J. Schneider (2021), 
+	  <u>Evaluating the Sensitivity of SARS-CoV-2 Infection Rates on College Campuses to Wastewater Surveillance</u>,
+	  accepted, <i>Infectious Disease Modelling<\i>,
+	  <a href="https://www.medrxiv.org/content/10.1101/2020.10.09.20210245v1">Preprint on medRxiv here</a></div></div>
+<div><br /></div>
 
 <div><div>[25] <b>Wong, T.E.</b>, Y. Cui, D. Royer, and K. Keller (2021), 
 	<u>A tighter constraint on Earth-system sensitivity from long-term temperature and carbon-cycle observations</u>,
