--- a/index.html
+++ b/index.html
@@ -46,15 +46,17 @@
 		    <span class="mediumText">About me</span><hr>
 		    <p>Mathematics is a powerful tool which enables us to answer interesting questions. 
 	In my research, I use mathematical and statistical tools to characterize uncertainty in physical models.
-	I am particularly interested in assessing how these modeling uncertainties map to uncertainty in decision-making, in settings ranging from mitigating climate risks to determining how best to split the bill when getting dinner with friends.
-	In the classroom, I aim to draw on these experiences to show students that mathematics is much more than just a set of prerequisites for their other coursework.
+	I am particularly interested in assessing how these modeling uncertainties map to uncertainty in decision-making, 
+	in settings ranging from mitigating climate risks to determining how best to split the bill when getting dinner with friends.
+	In the classroom, I like to draw on these experiences to (hopefully!) show students that mathematics is much more than just 
+	a set of prerequisites for their other coursework. It turns out that mathematics and statistics are the foundation of... well, pretty much all of science.
 		    </p>
 
 		    <div>
 			    <section class="paddingTopped">
 				    <span class="emphText">Current semester</span><hr>
-					<p>In Spring 2021, I am teaching Stochastic Processes (MATH 505/605). </p>
-					<p><b>Office hours:  Mon 2:30-4, Thu 11-12:30 (via Zoom; see myCourses for a Zoom link)</b></p>
+					<p>In Fall 2021, I am teaching Probability and Statistics I (MATH 251). </p>
+					<p><b>Office hours:  Mon 11:45-1:15, Wed 10:30-12 (in-person, probably using the chalkboards outside my office because ventilation is important)</b></p>
 					<p>and by appointment.</p>
 					<p>If you need to meet and chat outside of regularly scheduled office hours, send me an email to set something up so we can have a focused conversation.</p>
 					</div>
