--- a/publications.html
+++ b/publications.html
@@ -95,7 +95,7 @@
 
 <div><div>[26] <b>Wong T.E.</b>, G.M. Thurston, N. Barlow, N. Cahill, L. Carichino, K. Maki, D. Ross, and J. Schneider (2021), 
 	  <u>Evaluating the Sensitivity of SARS-CoV-2 Infection Rates on College Campuses to Wastewater Surveillance</u>,
-	  accepted, <i>Infectious Disease Modelling<\i>,
+	  accepted, <i>Infectious Disease Modelling</i>,
 	  <a href="https://www.medrxiv.org/content/10.1101/2020.10.09.20210245v1">Preprint on medRxiv here</a></div></div>
 <div><br /></div>
 
