--- a/students.html
+++ b/students.html
@@ -53,17 +53,11 @@ My main research interests are centered around future projections of sea-level r
 						<div class="col-xs-12">
 							<span class="emphText">Current</span><hr>
 
-<p><span style="color:#FBB917;font-weight:bold">Matthew Dunham, REU student researcher</span> using Jupyter notebooks to characterize students'
-development of computational literacy in physics and mathematics (Summer 2021)</p>
-
-<p><span style="color:#045F5F;font-weight:bold">Beck Tedeschi, REU student researcher</span> developing stochastic models to assess retention and persistence 
-rates for underrepresented undergraduate student populations (Summer 2021)</p>
-
-<p><span style="color:firebrick;font-weight:bold">Grayson Olin, B.S./I.E. Research Fellowship</span> evaluating the impacts of correlated sources of data
-on constraining future predictions of sea-level rise (Summer 2021)</p>
+<p><span style="color:#461B7E;font-weight:bold">Tiana Hose, B.S. student researcher</span> using longitudinal data analysis to examine the impacts of 
+	Learning Assistants, class sizes, and other interventions on student retention, performance, and persistence (Fall 2021-)</p>
 
 <p><span style="color:darkturquoise;font-weight:bold">Jaser Iniguez, M.S. student researcher</span> using paleoclimate models and proxy data to characterize
-structural uncertainty and time-variation in the Earth-system sensitivity (Summer 2021)</p>
+structural uncertainty and time-variation in the Earth-system sensitivity (Summer 2021-)</p>
 
 <p><span style="color:limegreen;font-weight:bold">Meghan Childs, Ph.D. student researcher</span> data-informed stochastic modeling for the spread of 
 COVID-19 (2021-)</p>
@@ -79,6 +73,15 @@ COVID-19 (2021-)</p>
 					<div class="row">
 						<div class="col-xs-12">
 							<span class="emphText">Former</span><hr>
+
+<p><span style="color:#firebrick;font-weight:bold">Matthew Dunham, REU student researcher</span> using Jupyter notebooks to characterize students'
+development of computational literacy in physics and mathematics (Summer 2021)</p>
+
+<p><span style="color:#045F5F;font-weight:bold">Mason Tedeschi, REU student researcher</span> developing stochastic models to assess retention and persistence 
+rates for underrepresented undergraduate student populations (Summer 2021)</p>
+
+<p><span style="color:FBB917;font-weight:bold">Grayson Olin, B.S./I.E. Research Fellowship</span> evaluating the impacts of correlated sources of data
+on constraining future predictions of sea-level rise (Summer 2021)</p>
 
 <p><span style="color:tomato;font-weight:bold">Matthew Peeks, B.S. student researcher</span> using fixed effects models to examine the effects 
 of class size on student performance and teaching evaluation scores (Spring 2021)</p>
