--- a/students.html
+++ b/students.html
@@ -74,13 +74,13 @@ COVID-19 (2021-)</p>
 						<div class="col-xs-12">
 							<span class="emphText">Former</span><hr>
 
-<p><span style="color:#firebrick;font-weight:bold">Matthew Dunham, REU student researcher</span> using Jupyter notebooks to characterize students'
+<p><span style="color:firebrick;font-weight:bold">Matthew Dunham, REU student researcher</span> using Jupyter notebooks to characterize students'
 development of computational literacy in physics and mathematics (Summer 2021)</p>
 
 <p><span style="color:#045F5F;font-weight:bold">Mason Tedeschi, REU student researcher</span> developing stochastic models to assess retention and persistence 
 rates for underrepresented undergraduate student populations (Summer 2021)</p>
 
-<p><span style="color:FBB917;font-weight:bold">Grayson Olin, B.S./I.E. Research Fellowship</span> evaluating the impacts of correlated sources of data
+<p><span style="color:#FBB917;font-weight:bold">Grayson Olin, B.S./I.E. Research Fellowship</span> evaluating the impacts of correlated sources of data
 on constraining future predictions of sea-level rise (Summer 2021)</p>
 
 <p><span style="color:tomato;font-weight:bold">Matthew Peeks, B.S. student researcher</span> using fixed effects models to examine the effects 
