--- a/publications.html
+++ b/publications.html
@@ -93,10 +93,10 @@
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
 
-<div><div>[26] <b>Wong T.E.</b>, G.M. Thurston, N. Barlow, N. Cahill, L. Carichino, K. Maki, D. Ross, and J. Schneider (2021), 
+<div><div>[26] <b>Wong T.E.</b>, G.M. Thurston, N. Barlow, N.D. Cahill, L. Carichino, K. Maki, D. Ross, and J. Schneider (2021), 
 	  <u>Evaluating the Sensitivity of SARS-CoV-2 Infection Rates on College Campuses to Wastewater Surveillance</u>,
-	  accepted, <i>Infectious Disease Modelling</i>,
-	  <a href="https://www.medrxiv.org/content/10.1101/2020.10.09.20210245v1">Preprint on medRxiv here</a></div></div>
+	  <i>Infectious Disease Modelling</i>,
+	  DOI: 10.1016/j.idm.2021.09.003. <a href="https://doi.org/10.1016/j.idm.2021.09.003">Link</a></div></div>
 <div><br /></div>
 
 <div><div>[25] <b>Wong, T.E.</b>, Y. Cui, D. Royer, and K. Keller (2021), 
