--- a/publications.html
+++ b/publications.html
@@ -68,6 +68,10 @@
 	<a href="">Preprint to come</a></div></div>
 <div><br /></div>
 
+<div><div>Iniguez, J. and <b>T.E. Wong</b> (2021), 
+	<u>Plausible Bounds for Time Variations in Earth-System Sensitivity Over the Phanerozoic</u>. 
+<div><br /></div>
+
 <div><div>Hough, A. and <b>T.E. Wong</b> (2021), 
 	<u>Evolution of Parametric Drivers of High-End Sea-Level Hazards</u>. 
 	<a href="https://arxiv.org/abs/2106.12041">Preprint on arXiv here</a></div></div>
