--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <a href="teaching.html" class="w3-bar-item w3-button w3-mobile">Teaching</a>
   <a href="students.html" class="w3-bar-item w3-button w3-mobile">Students</a>
   <a href="assets/Wong_CV_Jan2021.pdf" class="w3-bar-item w3-button w3-mobile">CV</a>
+  <a href="consulting.html" class="w3-bar-item w3-button w3-mobile">Consulting</a>
   <a href="examart.html" class="w3-bar-item w3-button w3-mobile">Exam art</a>
   <a href="data.html" class="w3-bar-item w3-button w3-mobile">Data</a>
 </div>
