--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 		    <div>
 			    <section class="paddingTopped">
 				    <span class="emphText">Current semester</span><hr>
-					<p>In Fall 2021, I am teaching Probability and Statistics I (MATH 251). </p>
-					<p><b>Office hours:  Mon 11:45-1:15, Wed 10:30-12 (in-person, probably using the chalkboards outside my office because ventilation is important)</b></p>
+					<p>In Spring 2022, I am teaching Risk Analysis with Applications in the Earth Sciences (MATH 589/689). </p>
+					<p><b>Office hours:  Mon 3-4:30, Wed 2-3:30 (by Zoom until further notice)</b></p>
 					<p>and by appointment.</p>
 					<p>If you need to meet and chat outside of regularly scheduled office hours, send me an email to set something up so we can have a focused conversation.</p>
 					</div>
@@ -67,6 +67,8 @@
 							<p>Uncertainty in climate model projections, sea level rise in particular, can lead to suboptimal, ineffective, and - at worst - outright dangerous policy decisions. To avoid this, we must use the information we have available make the best possible policy decisions. This requires accounting for not only varying forms of uncertainty in model parameters and projections, but deep uncertainty - uncertainty in the uncertainty in model structure and parameters. Statistical calibration approaches allow us to constrain these models and characterize the uncertainties inherent in both the model and data, and are a critical part of any modeling effort.</p>
 
 <p>I am interested in future projections of sea-level rise and their impacts on coastal defense decision-making. This includes examining statistical model calibration techniques and extreme value statistical models.</p>
+
+<p>I am also interested in educational data analytics. For example, I'm interested in both leveraging educational data in new and interesting ways to assess outcomes like student learning, retention and persistence, as well as using new and interesting educational data to assess these outcomes. These projects often involve a heavy dose of computation, which ties into a second education research interest of mine: computational literacy. Broadly speaking, this can describe how we use computation as a way to approach and solve problems, as well as communicate scientific/scholarly information within and across disciplines.</p>
 							</div>
 
 							<div>
