--- a/publications.html
+++ b/publications.html
@@ -77,13 +77,7 @@
 	<u>Evolution of Parametric Drivers of High-End Sea-Level Hazards</u>. 
 	<a href="https://arxiv.org/abs/2106.12041">Preprint on arXiv here</a></div></div>
 <div><br /></div>
-
-<div><div><b>T.E. Wong</b>, T. Torline and M. Zhang (2021), 
-	<u>Evidence for increasing frequency of extreme coastal sea levels</u>.
-	<a href="https://arxiv.org/abs/2006.06804">Preprint on arXiv here</a>,
-	<a href="https://zenodo.org/record/3889897">data and codes here</a></div></div>
-<div><br /></div>
-
+	
 							<div><br /></div>
 
 						</div>
@@ -97,6 +91,13 @@
 					<div class="row">
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
+
+<div><div>[27] <b>T.E. Wong</b>, H. Sheets, T. Torline and M. Zhang (2022), 
+	<u>Evidence for increasing frequency of extreme coastal sea levels</u>,
+	<i>Frontiers in Climate</i>,
+	DOI: 10.3389/fclim.2022.796479. <a href="https://www.frontiersin.org/articles/10.3389/fclim.2022.796479/abstract">Link</a>,
+	<a href="https://doi.org/10.5281/zenodo.5934224">data and codes here</a></div></div>
+<div><br /></div>
 
 <div><div>[26] <b>Wong T.E.</b>, G.M. Thurston, N. Barlow, N.D. Cahill, L. Carichino, K. Maki, D. Ross, and J. Schneider (2021), 
 	  <u>Evaluating the Sensitivity of SARS-CoV-2 Infection Rates on College Campuses to Wastewater Surveillance</u>,
