--- a/publications.html
+++ b/publications.html
@@ -72,11 +72,6 @@
 <div><div>Iniguez, J. and <b>T.E. Wong</b> (2021), 
 	<u>Plausible Bounds for Time Variations in Earth-System Sensitivity Over the Phanerozoic</u>. 
 <div><br /></div>
-
-<div><div>Hough, A. and <b>T.E. Wong</b> (2021), 
-	<u>Evolution of Parametric Drivers of High-End Sea-Level Hazards</u>. 
-	<a href="https://arxiv.org/abs/2106.12041">Preprint on arXiv here</a></div></div>
-<div><br /></div>
 	
 							<div><br /></div>
 
@@ -91,6 +86,13 @@
 					<div class="row">
 						<div class="col-xs-12">
 							<span class="emphText">Published:</span><hr>
+
+<div><div>[28] Hough, A. and <b>T.E. Wong</b> (2022), 
+	<u>Evolution of Parametric Drivers of High-End Sea-Level Hazards</u>,
+	<i>Advances in Statistical Climatology, Meteorology and Oceanography</i>,
+	accepted.
+	<a href="https://arxiv.org/abs/2106.12041">Preprint on arXiv here</a></div></div>
+<div><br /></div>
 
 <div><div>[27] <b>T.E. Wong</b>, H. Sheets, T. Torline and M. Zhang (2022), 
 	<u>Evidence for increasing frequency of extreme coastal sea levels</u>,
