--- a/publications.html
+++ b/publications.html
@@ -90,8 +90,8 @@
 <div><div>[28] Hough, A. and <b>T.E. Wong</b> (2022), 
 	<u>Evolution of Parametric Drivers of High-End Sea-Level Hazards</u>,
 	<i>Advances in Statistical Climatology, Meteorology and Oceanography</i>,
-	accepted.
-	<a href="https://arxiv.org/abs/2106.12041">Preprint on arXiv here</a></div></div>
+	DOI: 10.5194/ascmo-8-117-2022.
+	<a href="https://doi.org/10.5194/ascmo-8-117-2022">Link</a></div></div>
 <div><br /></div>
 
 <div><div>[27] <b>T.E. Wong</b>, H. Sheets, T. Torline and M. Zhang (2022), 
