--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <a href="publications.html" class="w3-bar-item w3-button w3-mobile">Publications</a>
   <a href="teaching.html" class="w3-bar-item w3-button w3-mobile">Teaching</a>
   <a href="students.html" class="w3-bar-item w3-button w3-mobile">Students</a>
-  <a href="assets/Wong_CV_Jan2021.pdf" class="w3-bar-item w3-button w3-mobile">CV</a>
+  <a href="assets/Wong_CV_Jul2022.pdf" class="w3-bar-item w3-button w3-mobile">CV</a>
   <a href="consulting.html" class="w3-bar-item w3-button w3-mobile">Consulting</a>
   <a href="examart.html" class="w3-bar-item w3-button w3-mobile">Exam art</a>
   <a href="data.html" class="w3-bar-item w3-button w3-mobile">Data</a>
@@ -94,7 +94,7 @@
 							<p><a href="publications.html">Publications</a></p>
 							<p><a href="teaching.html">Teaching</a></p>
 							<p><a href="students.html">Students</a></p>
-							<p><a href="assets/Wong_CV_Jan2021.pdf">Reasonably current CV</a></p>
+							<p><a href="assets/Wong_CV_Jul2022.pdf">Reasonably current CV</a></p>
 							<p><a href="examart.html">Exam art</a></p>
 
 							<div>
