--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
 		    <div>
 			    <section class="paddingTopped">
 				    <span class="emphText">Current semester</span><hr>
-					<p>In Spring 2022, I am teaching Risk Analysis with Applications in the Earth Sciences (MATH 589/689). </p>
-					<p><b>Office hours:  Mon 3-4:30, Wed 2-3:30 (by Zoom until further notice)</b></p>
-					<p>and by appointment.</p>
+					<p></p>
+					<p><b>Office hours:  N/A</b></p>
+					<p></p>
 					<p>If you need to meet and chat outside of regularly scheduled office hours, send me an email to set something up so we can have a focused conversation.</p>
 					</div>
 							<div>
